

  ChangeLog.txt for libSUFR
  
  
    4: AstroFloyd, 5/10/2010
      - Converting libAF git repository:
	- added constants.f90 (probably happened earlier, but file didn't get added)
      
    3: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 19/07/2010:
	- added solvers.f90
      
    2: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 13/07/2010:
        - adding compiler name to lib name and include dir
	- added libSUFR.f90
      
    1: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 12/07/2010:
        - initial version
      
    
  